--- a/src/index.ejs
+++ b/src/index.ejs
@@ -11,8 +11,8 @@
     <link rel="icon" href="img/icon.png">
     <title>Podcast Web App</title>
 
-    <% 
-        const date = new Date(); 
+    <%
+        const date = new Date();
         timestamp = date.getTime();
     %>
 
@@ -23,6 +23,8 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/plyr/3.5.6/plyr.css" type="text/css">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" type="text/css"/>
     <link rel="stylesheet" href="css/main.min.css?pwacss=<%= timestamp %>" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,500,700,800,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <!--CSS-->
 </head>
 
@@ -57,7 +59,7 @@
     <section>
         <div class="container wrap user-podcast__wrap js-podcast-list">
             <!-- <div id="main">
-                <span class="spinner"></span>  
+                <span class="spinner"></span>
             </div> -->
         </div>
     </section>
